--- a/.github/workflows/compile-release.yml
+++ b/.github/workflows/compile-release.yml
@@ -1,10 +1,6 @@
 name: Build Release
 
-on:
-  push:
-    branches: [ main, feat-add-github-actions ]
-  pull_request:
-    branches: [ main, feat-add-github-actions ]
+on: push
 
 env:
   CARGO_TERM_COLOR: always
