--- a/.github/workflows/compile-release.yml
+++ b/.github/workflows/compile-release.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           toolchain: stable
           override: true
-          target: x86_64-unknown-linux-gnu, x86_64-pc-windows-gnu, x86_64-apple-darwin
+          target: [x86_64-unknown-linux-gnu, x86_64-pc-windows-gnu, x86_64-apple-darwin]
       - name: Build Extension
         uses: actions-rs/cargo@v1
         with:
