--- a/.github/workflows/compile-release.yml
+++ b/.github/workflows/compile-release.yml
@@ -16,10 +16,22 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
-          override: true
-          target: 'x86_64-unknown-linux-gnu, x86_64-pc-windows-gnu, x86_64-apple-darwin'
-      - name: Build Extension
+          targets: 'x86_64-unknown-linux-gnu, x86_64-pc-windows-gnu, x86_64-apple-darwin'
+      - name: Build Extension (Linux GNU)
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --release --target x86_64-unknown-linux-gnu, x86_64-pc-windows-gnu, x86_64-apple-darwin
+          args: --release --target x86_64-unknown-linux-gnu
+          use-cross: true
+      - name: Build Extension (Windows GNU)
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --release --target x86_64-pc-windows-gnu
+          use-cross: true
+      - name: Build Extension (MacOS X86_64)
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --release --target x86_64-apple-darwin
+          use-cross: true
