--- a/.github/workflows/compile-release.yml
+++ b/.github/workflows/compile-release.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           command: build
           args: --release --target x86_64-unknown-linux-gnu
-          use-cross: true
+          use-cross: false
       - name: Build Extension (Windows GNU)
         uses: actions-rs/cargo@v1
         with:
