--- a/Cross.toml
+++ b/Cross.toml
@@ -1,5 +1,10 @@
+[build.env]
+passthrough = [
+    "RUST_BACKTRACE"
+]
+
 [build]
 xargo = false
 build-std = false
 default-target = "x86_64-unknown-linux-gnu"
-pre-build = ["apt install software-properties-common && add-apt-repository ppa:ondrej/php && apt update && apt install php8.0"] # can also be the path to a file to run
+pre-build = ["DEBIAN_FRONTEND=noninteractive apt-get install software-properties-common -y && add-apt-repository ppa:ondrej/php && apt update && apt install php8.0 -y"] # can also be the path to a file to run
