--- a/.github/workflows/compile-release.yml
+++ b/.github/workflows/compile-release.yml
@@ -5,29 +5,25 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build Releases X86_64
+    name: Build Linux Releases X86_64
     steps:
       - uses: actions/checkout@v2
       - name: Install Rust Toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
-          targets: 'x86_64-unknown-linux-gnu, x86_64-pc-windows-gnu, x86_64-apple-darwin'
+          targets: 'x86_64-unknown-linux-gnu, x86_64-unknown-linux-musl'
+      - name: Install Dependencies
+        run: sudo apt-get install musl-tools build-essential clang-11 php8.0-dev
       - name: Build Extension (Linux GNU)
         uses: actions-rs/cargo@v1
         with:
           command: build
           args: --release --target x86_64-unknown-linux-gnu
           use-cross: false
-      - name: Build Extension (Windows GNU)
+      - name: Build Extension (Alpine musl)
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --release --target x86_64-pc-windows-gnu
-          use-cross: true
-      - name: Build Extension (MacOS X86_64)
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release --target x86_64-apple-darwin
-          use-cross: true
+          args: --release --target x86_64-unknown-linux-musl
+          use-cross: false
