--- a/.github/workflows/compile-release.yml
+++ b/.github/workflows/compile-release.yml
@@ -46,7 +46,7 @@ jobs:
           toolchain: stable
           targets: 'aarch64-unknown-linux-gnu, aarch64-unknown-linux-musl'
       - name: Install Dependencies
-        run: sudo apt-get install musl-tools build-essential clang-11 php8.0-dev
+        run: sudo apt-get install musl-tools build-essential clang-11 php8.0-dev gcc-aarch64-linux-gnu
       - name: Build Extension (Linux GNU)
         uses: actions-rs/cargo@v1
         with:
