--- a/.github/workflows/compile-release.yml
+++ b/.github/workflows/compile-release.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Bring up docker container
         run: docker start buildcontainer
       - name: Install Dependencies
-        run: docker exec buildcontainer sh -c "apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install musl-tools build-essential clang-11 php8.1-dev gcc gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu -y"
+        run: docker exec buildcontainer sh -c "apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install musl-tools musl-dev build-essential clang-11 php8.1-dev gcc gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu -y"
       - name: Install Rust
         run: docker exec buildcontainer sh -c "curl https://sh.rustup.rs -sSf | sh -s -- -y"
       - name: Install Alpine Toolchain
