--- a/.github/workflows/compile-release.yml
+++ b/.github/workflows/compile-release.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Bring up docker container
         run: docker start buildcontainer
       - name: Install Dependencies
-        run: docker exec buildcontainer apt-get install musl-tools build-essential clang-11 php8.1-dev
+        run: docker exec buildcontainer apt-get install musl-tools musl-dev build-essential clang-11 php8.1-dev
       - name: Build Extension (Linux GNU && Musl)
         run: docker exec buildcontainer sh -c "cd /app && /scripts/build.sh"
       - uses: actions/upload-artifact@v3
