--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ arch:
   - arm64
 
 before_install:
+  - sudo apt-get update
   - sudo apt-get install musl-tools build-essential clang-11 php8.0-dev
 
 script:
