--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: rust
 
-dist: bionic
+dist: focal
 
 arch:
   - amd64
@@ -8,7 +8,7 @@ arch:
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install musl-tools build-essential clang-11 php8.1-dev
+  - sudo apt-get install musl-tools build-essential clang-11 php-dev
   - ./helper-scripts/install-toolchain.sh
 
 script:
