--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,10 @@ jobs:
         - ARCH=arm64
 
 before_install:
-  - echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
-  - sudo service docker restart
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
   - docker build --platform=linux/$ARCH -t buildimage .
   - docker create -t -i -v "$(pwd):/app" --platform=linux/$ARCH --name=buildcontainer buildimage tail -f /dev/null
   - docker start buildcontainer
