--- a/.travis.yml
+++ b/.travis.yml
@@ -4,27 +4,28 @@ dist: bionic
 
 arch:
   - amd64
+  - arm64
 
-jobs:
-  include:
-    - compile-x86_64-unknown-linux-gnu:
-      env:
-        - CARGO_BUILD_TARGET=x86_64-unknown-linux-gnu
-        - RUST_BACKTRACE=1
-        - ARCH=amd64
-    - compile-arm64-unknown-linux-gnu:
-      env:
-        - CARGO_BUILD_TARGET=arm64-unknown-linux-gnu
-        - RUST_BACKTRACE=1
-        - ARCH=arm64
+# jobs:
+#   include:
+#     - compile-x86_64-unknown-linux-gnu:
+#       env:
+#         - CARGO_BUILD_TARGET=x86_64-unknown-linux-gnu
+#         - RUST_BACKTRACE=1
+#         - ARCH=amd64
+#     - compile-arm64-unknown-linux-gnu:
+#       env:
+#         - CARGO_BUILD_TARGET=arm64-unknown-linux-gnu
+#         - RUST_BACKTRACE=1
+#         - ARCH=arm64
 
 before_install:
   - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
   - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
-  - docker build --platform=linux/$ARCH -t buildimage .
-  - docker create -t -i -v "$(pwd):/app" --platform=linux/$ARCH --name=buildcontainer buildimage tail -f /dev/null
+  - docker build --platform=linux/$$TRAVIS_CPU_ARCH -t buildimage .
+  - docker create -t -i -v "$(pwd):/app" --platform=linux/$TRAVIS_CPU_ARCH --name=buildcontainer buildimage tail -f /dev/null
   - docker start buildcontainer
 
 script:
