--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
   - sudo add-apt-repository "deb [arch=$TRAVIS_CPU_ARCH] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
-  - docker build --platform=linux/$$TRAVIS_CPU_ARCH -t buildimage .
+  - docker build --platform=linux/$TRAVIS_CPU_ARCH -t buildimage .
   - docker create -t -i -v "$(pwd):/app" --platform=linux/$TRAVIS_CPU_ARCH --name=buildcontainer buildimage tail -f /dev/null
   - docker start buildcontainer
 
