--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
   $(lsb_release -cs) stable"
 - sudo apt-get update
 - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+- sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
 - sudo systemctl start docker
 script:
 - cargo vendor
